--- a/web/src/main/resources/org/geogebra/web/resources/scss/settings-styles.scss
+++ b/web/src/main/resources/org/geogebra/web/resources/scss/settings-styles.scss
@@ -544,6 +544,51 @@ $shadow-dark: 0px 0px 2px 1px rgba(102, 102, 102, 0.3);
     		}
     }
 
+    .gridDropdown {
+        .button {
+            font-size: 87%;
+            color: #666666;
+            border: 0px;
+            box-shadow: none;
+            border-bottom: 1px solid #dcdcdc;
+            transition: border-bottom 0.3s ease-out;
+            &:hover {
+                background-color: transparent;
+                border-bottom: 1px solid $teal-default !important;
+            }
+        }
+    }
+
+    .gridDrowpdownView {
+        .cell {
+            vertical-align: top;
+            cursor: pointer;
+            .item {
+                margin: 8px;
+                .image {
+                    width: 104px;
+                    height: 64px;
+                    margin-bottom: 8px;
+                    border-radius: 4px;
+                    border: 1px solid #e4e4e4;
+                }
+                .title {
+                    text-align: center;
+                    font-size: 87%;
+                    width: 104px;
+                }
+            }
+            .activeItem {
+                .image {
+                    border: 1px solid $teal-default;
+                }
+                .title {
+                    color: $teal-default;
+                }
+            }
+        }
+    }
+
     .animateInFromRight {
         animation-duration: 0.25s;
         animation-name: settingsIn;
