--- a/web/src/main/resources/org/geogebra/web/resources/css/web-styles.less
+++ b/web/src/main/resources/org/geogebra/web/resources/css/web-styles.less
@@ -360,9 +360,13 @@
 		opacity: 0.26 !important;
 	}
 
-	.listMenuItem{
+	.listMenuItem {
 		box-sizing:border-box;
 		list-style: none;
+	}
+
+	.selectedItem {
+		background: #eeeeee;
 	}
 
 	.gwt-MenuBar-horizontal .gwt-MenuItemSeparator {
