MOW-834 Add mebis colors to grid dropdown, change styles of the dropdown

--- a/web/src/main/resources/org/geogebra/web/resources/scss/settings-styles.scss
+++ b/web/src/main/resources/org/geogebra/web/resources/scss/settings-styles.scss
@@ -577,13 +577,14 @@ $shadow-dark: 0px 0px 2px 1px rgba(102, 102, 102, 0.3);
                 text-align: center;
                 font-size: 87%;
                 width: 104px;
+                min-height: 40px;
             }
             &-active {
                 .image {
-                    border: 1px solid $teal-default;
+                    border: 1px solid $mow_primary;
                 }
                 .title {
-                    color: $teal-default;
+                    color: $mow_primary;
                 }
             }
         }
