Applying recommended fix as css.

--- a/web/src/main/resources/org/geogebra/web/resources/scss/ev-styles.scss
+++ b/web/src/main/resources/org/geogebra/web/resources/scss/ev-styles.scss
@@ -764,6 +764,14 @@
             overflow: hidden;
          }
 
+         .accessibilityView {
+            opacity: 0.01;
+            position: fixed;
+            width: 1px;
+            height: 1px;
+            overflow: scroll;
+         }
+
 }
 
 /* Outside of GeoGebraFrame */
