MOW-834 Add rounded corners to the popup

--- a/web/src/main/resources/org/geogebra/web/resources/css/web-styles.less
+++ b/web/src/main/resources/org/geogebra/web/resources/css/web-styles.less
@@ -4154,6 +4154,7 @@
     }
 
     .materialPopupPanel {
+        border-radius: 4px;
         padding: 8px;
         box-shadow: 0 6px 16px rgba(0, 0, 0, 0.28);
     }
