Sub and Superscript

--- a/web/src/main/resources/org/geogebra/web/resources/css/web-styles.less
+++ b/web/src/main/resources/org/geogebra/web/resources/css/web-styles.less
@@ -1118,6 +1118,14 @@
 		padding-left: 21px;
 	}
 
+	.gwt-MenuBar-vertical .toolsMenuItem {
+		background: red;
+	}
+
+	.gwt-MenuBar-vertical .toolsMenuItem >* {
+		display: inline;
+	}
+
 	.gwt-MenuItem {
 		white-space: nowrap;
 	}
