--- a/web/src/main/resources/org/geogebra/web/resources/scss/av-styles.scss
+++ b/web/src/main/resources/org/geogebra/web/resources/scss/av-styles.scss
@@ -77,7 +77,7 @@ $duration: 0.2s;
 			opacity: 0.38;
 		}
 
-		img {
+		.menuImg {
 			width: 24px !important;
 			height: 24px !important;
 			position: absolute;
