--- a/web/src/main/resources/org/geogebra/web/resources/scss/mow.scss
+++ b/web/src/main/resources/org/geogebra/web/resources/scss/mow.scss
@@ -558,30 +558,30 @@
 	}
 
 	.inlineTextToolbar {
-		padding: 0 16px 4px 16px;
+		padding: 0 16px 6px 16px;
 
 		&.selectedItem {
 			background: none;
 		}
 
 		.MyToggleButton {
-		    border-radius: 2px;
-            display: inline-block;
-            margin: 0px 8px 0px 0px;
+			border-radius: 2px;
+			display: inline-block;
+			margin: 0 8px 0 0;
 
 			.gwt-Image {
-			    opacity: 0.7;
-                margin-left: 0px;
-                position: relative;
+				opacity: 0.7;
+				margin-left: 0;
+				position: relative;
 			}
 
 			&.selected {
-			    border-color: $mow_primary;
+				border-color: $mow_primary;
 			}
 
 			&:hover {
-            	border-color: $mow_primary;
-            }
+				border-color: $mow_primary;
+			}
 		}
 	}
 
