add responsible submenu

--- a/web/src/main/resources/org/geogebra/web/resources/scss/mow.scss
+++ b/web/src/main/resources/org/geogebra/web/resources/scss/mow.scss
@@ -557,6 +557,14 @@
 		margin: 6px 0 6px auto;
 	}
 
+	.mowTextOnlyMenuItem {
+	    padding-left: 16px !important;
+	}
+
+	.mowScrollableSubmenu {
+	    overflow-y: auto;
+	}
+
 	.inlineTextToolbar {
 		padding: 0 16px 6px 16px;
 
