Fixing MR comments

--- a/web/src/main/resources/org/geogebra/web/resources/scss/mow.scss
+++ b/web/src/main/resources/org/geogebra/web/resources/scss/mow.scss
@@ -557,11 +557,11 @@
 		margin: 6px 0 6px auto;
 	}
 
-	.mowTextOnlyMenuItem {
-	    padding-left: 16px !important;
+    li.gwt-MenuItem.listMenuItem.textOnly {
+	    padding-left: 16px;
 	}
 
-	.mowScrollableSubmenu {
+	.scrollableSubmenu {
 	    overflow-y: auto;
 	}
 
