--- a/web/src/main/resources/org/geogebra/web/resources/scss/mow.scss
+++ b/web/src/main/resources/org/geogebra/web/resources/scss/mow.scss
@@ -557,6 +557,17 @@
 		margin: 6px 0 6px auto;
 	}
 
+    .fontSubMenu {
+        .gwt-MenuItem.listMenuItem.no-image {
+            min-width: 190px;
+            padding: 4px 16px 0px 0px;
+            border-radius: 2px;
+            cursor: pointer;
+            height: 32px;
+        }
+        overflow-y: auto;
+    }
+
   	.inlineTextToolbar {
 		padding: 0 16px 6px 16px;
 
