no opacity in submenu

--- a/web/src/main/resources/org/geogebra/web/resources/scss/mow.scss
+++ b/web/src/main/resources/org/geogebra/web/resources/scss/mow.scss
@@ -565,6 +565,8 @@
             cursor: pointer;
             height: 32px;
         }
+
+        background-color: $white;
         overflow-y: auto;
     }
 
