--- a/web/src/main/resources/org/geogebra/web/resources/scss/mow.scss
+++ b/web/src/main/resources/org/geogebra/web/resources/scss/mow.scss
@@ -16,7 +16,6 @@
 	
 	// comes from youtube player, you must not change this.
 	$z_mow_video: 50;
-	$z_mow_video_background: 12;
 	$z_mask: 50;
 
 /*****************
@@ -446,9 +445,8 @@
 
 	.mowWidget.background {
 		@extend .mowVideo;
-		z-index: $z_mow_video_background;
 	}
-	
+
 	.mowVideo video {
 		width: 100%;
 		height: 100%;
@@ -465,7 +463,7 @@
 		border: 1px solid;
 	}
 
-	.mowDoubleCanvas {
+	.layeredCanvas {
 		.mowVideo {
 			position: absolute;
 			border-style: none;
