--- a/web/src/main/resources/org/geogebra/web/resources/scss/mow.scss
+++ b/web/src/main/resources/org/geogebra/web/resources/scss/mow.scss
@@ -16,8 +16,6 @@
 	
 	// comes from youtube player, you must not change this.
 	$z_mow_video: 50;
-	$z_mow_video_background: 12;
-	$z_mow_foreground: 50;
 	$z_mask: 50;
 
 /*****************
@@ -389,34 +387,7 @@
 				box-shadow: $shadow-elevation-8;
 			}
 		}
-	
-		/*.AutoCompleteTextFieldW {
-    				margin: 0px !important;
-    				padding: 8px 0px;
-    				border-radius: 2px;	
-    				width: calc(100% + 12px) !important;
-    				
-    				.TextField {
-    					padding: 8px 0px 8px 0px;
-    					border: none;
-    					border-bottom: none;
-    					background: transparent;
-    					box-shadow: none;
-    					border-radius: 0px !important;
-    					
-    					&:focus {
-    						border: none;
-    						border-bottom: 2px solid $mow_primary;
-  							padding: 8px 0px 6px 0px;
-    						width: calc(100% + 12px) !important;
-    						transition: width 0.2s;
-    						caret-color: $mow_primary;
-    					}
-    				}
-    			}
-	}*/
-	
-	
+
 	.mowPagePreviewCardDivider {
 		width: 240px;
 		height: 16px;
@@ -470,13 +441,15 @@
 			width: 100%;
 			height: 100%;
 		}
+		&.mowVideo {
+			border-style: none;
+		}
 	}
 
 	.mowWidget.background {
 		@extend .mowVideo;
-		z-index: $z_mow_video_background;
 	}
-	
+
 	.mowVideo video {
 		width: 100%;
 		height: 100%;
@@ -493,36 +466,6 @@
 		border: 1px solid;
 	}
 
-	.mowDoubleCanvas {
-		.mowVideo {
-			position: absolute;
-			border-style: none;
-		}
-
-		.mowBackground {
-			position: absolute; 
-			top: 0px;
-			bottom: 0px;
-			z-index: 0; 
-		}	
-
-		.cursor_pen,
-		.cursor_highlighter,
-		.cursor_eraser,
-		.cursor_rotation,
-		.cursor_hit,
-		.cursor_drag,
-		.cursor_resizeEW,
-		.cursor_resizeNS,
-		.cursor_resizeNESW,
-		.cursor_resizeNWSE,
-		.cursor_transparent {
-			position: absolute; 
-			top: 0px;
-			bottom: 0px;
-			z-index: $z_mow_foreground;
-		 }		
-	}
 
 	.mowMenuSeparator {
 		background-color: #dedede;
