--- a/web/src/main/resources/org/geogebra/web/resources/scss/dialog-styles.scss
+++ b/web/src/main/resources/org/geogebra/web/resources/scss/dialog-styles.scss
@@ -993,19 +993,13 @@ $shadow-card-hover: 0px 5px 5px -3px rgba(0,0,0,0.2), 0px 8px 10px 1px rgba(0,0,
 		}
 	}
 
-	.MaterialDialogBox {
-		.examStartDialog {
-			.examStartText {
-				font-size: 100%;
-				margin: 0px;
-				padding-right: 16px;
-			}
+	.dialogComponent.examStartDialog {
+	    max-width: 300px;
+        max-height: 151px;
 
-			.DialogButtonPanel {
-				.button {
-					cursor: pointer;
-				}
-			}
+		.examStartText {
+			font-size: 100%;
+			margin: 0px;
 		}
 	}
 
