--- a/web/src/main/resources/org/geogebra/web/resources/scss/dialog-styles.scss
+++ b/web/src/main/resources/org/geogebra/web/resources/scss/dialog-styles.scss
@@ -994,12 +994,14 @@ $shadow-card-hover: 0px 5px 5px -3px rgba(0,0,0,0.2), 0px 8px 10px 1px rgba(0,0,
 	}
 
 	.dialogComponent.examStartDialog {
-	    max-width: 300px;
-        max-height: 151px;
+	    max-width: 427px;
+        max-height: 155px;
 
 		.examStartText {
 			font-size: 100%;
 			margin: 0px;
+			padding-bottom: 24px;
+			color: $text-secondary;
 		}
 	}
 
