--- a/web/src/main/resources/org/geogebra/web/resources/scss/component-styles.scss
+++ b/web/src/main/resources/org/geogebra/web/resources/scss/component-styles.scss
@@ -342,6 +342,15 @@
         .html-face {
             text-align: center;
         }
+
+        &.disabled {
+            color: $disabled-text-btn-col;
+
+            &:hover {
+                background: transparent;
+                cursor: default;
+            }
+        }
     }
 
     /** Material Design CONTAINED BUTTON **/
@@ -357,6 +366,17 @@
         &:hover {
             background: $mow_primary;
             box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2), 0px 4px 5px 0px rgba(0, 0, 0, 0.14), 0px 1px 10px 0px rgba(0,0,0,.12);
+        }
+
+        &.disabled {
+            background-color: $disabled-contained-btn-bg;
+            color: $disabled-contained-btn-col;
+
+            &:hover {
+                cursor: default;
+                background: $disabled-contained-btn-bg;
+                box-shadow: none;
+            }
         }
     }
 
