--- a/web/src/main/resources/org/geogebra/web/resources/scss/dialog-styles.scss
+++ b/web/src/main/resources/org/geogebra/web/resources/scss/dialog-styles.scss
@@ -295,9 +295,6 @@ $shadow-card-hover: 0px 5px 5px -3px rgba(0,0,0,0.2), 0px 8px 10px 1px rgba(0,0,
 		padding-left: 24px;
 		padding-right: 8px;
 		padding-top: 24px;
-
-	 /*   -webkit-box-shadow: 0 2px 10px rgba(0,0,0,.2);
-   		box-shadow: 0 2px 10px rgba(0,0,0,.2);*/
    		box-shadow: 0 9px 46px 8px rgba(0, 0, 0, 0.14), 0 11px 15px -7px rgba(0, 0, 0, 0.12), 0 24px 38px 3px rgba(0, 0, 0, 0.2);
    		-webkit-box-shadow: 0 9px 46px 8px rgba(0, 0, 0, 0.14), 0 11px 15px -7px rgba(0, 0, 0, 0.12), 0 24px 38px 3px rgba(0, 0, 0, 0.2);
 
@@ -457,6 +454,68 @@ $shadow-card-hover: 0px 5px 5px -3px rgba(0,0,0,0.2), 0px 8px 10px 1px rgba(0,0,
    		}
 	}
 
+	.dialogComponent {
+		.AutoCompleteTextFieldW {
+			margin: 8px 16px 16px 0px;
+			display: inline-block;
+		}
+
+		.mowInputPanelContent {
+
+			&.emptyState {
+				.inputLabel {
+					color: $text-secondary;
+					font-size: 75%;
+				}
+
+				.AutoCompleteTextFieldW {
+					border-bottom: 1px solid $black-42;
+
+					.TextField {
+						border: none;
+						box-shadow: none;
+						padding: 0px;
+						margin-bottom: 8px;
+						margin-top: 0px;
+						font-size: 100%;
+						color: $text-primary;
+						&::placeholder {
+							color: $text-secondary;
+						}
+					}
+				}
+			}
+
+			&.hoverState {
+				.inputLabel {
+					color: $black-87;
+				}
+
+				.AutoCompleteTextFieldW {
+					border-bottom: 2px solid $black-87;
+					margin: 8px 16px 15px 0px;
+				}
+			}
+
+			&.focusState, &.focusState:hover {
+				@extend .emptyState;
+				.inputLabel {
+					color: $mow_dark_87;
+				}
+
+				.AutoCompleteTextFieldW {
+					border-bottom: 2px solid $mow_dark;
+					margin: 8px 16px 15px 0px;
+				}
+			}
+		}
+   	}
+
+	.dialogComponent.materialRename {
+		max-width: 448px;
+		max-height: 167px;
+	}
+
 	.dialogComponent.mediaDialog {
 	    &.hyperLink {
 	        max-width: 448px;
@@ -562,76 +621,9 @@ $shadow-card-hover: 0px 5px 5px -3px rgba(0,0,0,0.2), 0px 8px 10px 1px rgba(0,0,
    				}
    			}
    		}
-
-   		.DialogButtonPanel {
-   			padding-top: 8px;
-
-   			.button {
-   				color: $mow_dark;
-   			}
-
-   			.insertBtn.button-up-disabled {
-   				opacity: 1;
-   				color: $mow_dark_26;
-
-   				&:hover {
-   					background: none !important;
-   				}
-   			}
-   		}
    	}
 
    	.MaterialDialogBox.optionDialog {
-   		.mowRenameDialogContent {
-   			.AutoCompleteTextFieldW {
-   				margin: 8px 16px 16px 0px;
-   			}
-
-   			&.emptyState {
-   				.inputLabel {
-   					color: $text-secondary;
-   					font-size: 75%;
-   				}
-
- 				.AutoCompleteTextFieldW {
- 					border-bottom: 1px solid $black-42;
- 					.TextField {
- 						padding: 0px;
- 						margin-bottom: 8px;
- 						margin-top: 0px;
- 						font-size: 100%;
- 						color: $text-primary;
- 						&::placeholder {
- 							color: $text-secondary;
- 						}
- 					}
- 				}
-
-   				&.hoverState {
-   					.inputLabel {
-   						color: $black-87;
-   					}
-
- 					.AutoCompleteTextFieldW {
- 						border-bottom: 2px solid $black-87;
- 						margin: 8px 16px 15px 0px;
- 					}
- 				}
-   			}
-
-   			&.focusState, &.focusState:hover {
-   				@extend .emptyState;
-   				.inputLabel {
-   					color: $mow_dark_87;
-   				}
-
- 				.AutoCompleteTextFieldW {
- 					border-bottom: 2px solid $mow_dark;
- 					margin: 8px 16px 15px 0px;
- 				}
-   			}
-   		}
-
 		.DialogButtonPanel {
 			padding-top: 8px;
 
@@ -684,7 +676,6 @@ $shadow-card-hover: 0px 5px 5px -3px rgba(0,0,0,0.2), 0px 8px 10px 1px rgba(0,0,
    		.DialogButtonPanel.withCopyToClip {
    			height: 96px;
    			padding-top: 24px;
-   			/*display: grid;*/
     		float: right;
 
    			.button {
