--- a/web/src/main/resources/org/geogebra/web/resources/scss/dialog-styles.scss
+++ b/web/src/main/resources/org/geogebra/web/resources/scss/dialog-styles.scss
@@ -511,6 +511,15 @@ $shadow-card-hover: 0px 5px 5px -3px rgba(0,0,0,0.2), 0px 8px 10px 1px rgba(0,0,
 		}
    	}
 
+   	.dialogComponent.renameMaterial {
+   		max-width: 472px;
+   		max-height: 123px;
+
+   		.dialogContent {
+            height: calc(100% - 84px);
+        }
+   	}
+
 	.dialogComponent.materialRename {
 		max-width: 448px;
 		max-height: 167px;
