--- a/web/src/main/resources/org/geogebra/web/resources/scss/dialog-styles.scss
+++ b/web/src/main/resources/org/geogebra/web/resources/scss/dialog-styles.scss
@@ -1638,12 +1638,31 @@ $shadow-card-hover: 0px 5px 5px -3px rgba(0,0,0,0.2), 0px 8px 10px 1px rgba(0,0,
         }
    	}
 
-   	.MaterialDialogBox.optionDialog.templateChooser {
+   	.dialogComponent.templateChooser {
+   		.dialogMainPanel {
+   			padding-left: 0px;
+   		}
+
+   		.dialogTitle {
+   			padding-left: 24px;
+   			margin-bottom: 0px;
+   		}
+
+   		.dialogContent {
+   			padding-right: 0px;
+   		}
+
+   		.dialogBtnPanel {
+   			position: relative;
+   			float: right;
+   		}
+
    	    padding-left: 0px;
         padding-right: 0px;
         max-width: 680px;
         max-height: 486px;
         overflow: auto;
+        height: unset;
 
    	    .Caption {
    	        height: 26px;
