--- a/web/src/main/resources/org/geogebra/web/resources/scss/dialog-styles.scss
+++ b/web/src/main/resources/org/geogebra/web/resources/scss/dialog-styles.scss
@@ -1753,42 +1753,16 @@ $shadow-card-hover: 0px 5px 5px -3px rgba(0,0,0,0.2), 0px 8px 10px 1px rgba(0,0,
    	}
 
    	.sessionExpireNotifyDialog {
-        z-index: 501;
-    	background-color: $white;
-    	border-radius: 2px;
-    	padding: 24px 8px 0px 24px;
-        box-shadow: 0 9px 46px 8px rgba(0, 0, 0, 0.14), 0 11px 15px -7px rgba(0, 0, 0, 0.12), 0
-        24px 38px 3px rgba(0, 0, 0, 0.2);
-       	-webkit-box-shadow: 0 9px 46px 8px rgba(0, 0, 0, 0.14), 0 11px 15px -7px rgba(0, 0, 0, 0.12), 0 24px 38px 3px rgba(0, 0, 0, 0.2);
+   		max-width: 400px;
+
+   		.dialogContent {
+            height: calc(100% - 52px);
+		}
 
         .sessionExpireTxt {
-            padding-right: 16px;
             color: $text-secondary;
             max-width: 384px;
+            margin-bottom: 20px;
         }
-
-        .DialogButtonPanel {
-             height: 36px;
-             text-align: right;
-             padding-top: 28px;
-             padding-right: 0px;
-             padding-bottom: 8px;
-             padding-left: 0px;
-
-           	.cancelBtn , .saveBtn  {
-            	@extend .flatDialogBtn;
-            	cursor: pointer;
-
-                color: $mow_primary;
-
-                &:hover {
-                   color: $mow_primary;
-                }
-
-            	.html-face {
-            		text-align: center;
-            	}
-           	}
-       }
     }
 }
