--- a/web/src/main/resources/org/geogebra/web/resources/scss/dialog-styles.scss
+++ b/web/src/main/resources/org/geogebra/web/resources/scss/dialog-styles.scss
@@ -86,7 +86,10 @@ $shadow-card-hover: 0px 5px 5px -3px rgba(0,0,0,0.2), 0px 8px 10px 1px rgba(0,0,
 	}
 
 	/* checkbox tool dialog */
-	.MaterialDialogBox.Checkbox {
+	.dialogComponent.Checkbox {
+	    max-width: 391px;
+        max-height: 438px;
+
 		.gwt-ListBox {
 			margin-right: 16px;
 			width: calc(100% - 16px) !important;
@@ -94,11 +97,14 @@ $shadow-card-hover: 0px 5px 5px -3px rgba(0,0,0,0.2), 0px 8px 10px 1px rgba(0,0,
 
 		.panelTitle {
   	  		margin-right: 16px;
-    		color: $teal-default;
     		display: block;
     		cursor: default;
-    		border-bottom: 1px solid $teal-light;
 		}
+
+		 .AutoCompleteTextFieldW {
+		    // ignore this for now (new design needed)
+            border-bottom-color: $mow-primary !important;
+         }
 	}
 
 	/* button tool dialog*/
@@ -296,8 +302,6 @@ $shadow-card-hover: 0px 5px 5px -3px rgba(0,0,0,0.2), 0px 8px 10px 1px rgba(0,0,
 		padding-right: 8px;
 		padding-top: 24px;
 
-	 /*   -webkit-box-shadow: 0 2px 10px rgba(0,0,0,.2);
-   		box-shadow: 0 2px 10px rgba(0,0,0,.2);*/
    		box-shadow: 0 9px 46px 8px rgba(0, 0, 0, 0.14), 0 11px 15px -7px rgba(0, 0, 0, 0.12), 0 24px 38px 3px rgba(0, 0, 0, 0.2);
    		-webkit-box-shadow: 0 9px 46px 8px rgba(0, 0, 0, 0.14), 0 11px 15px -7px rgba(0, 0, 0, 0.12), 0 24px 38px 3px rgba(0, 0, 0, 0.2);
 
@@ -455,6 +459,10 @@ $shadow-card-hover: 0px 5px 5px -3px rgba(0,0,0,0.2), 0px 8px 10px 1px rgba(0,0,
    			@extend .flatDialogBtn;
    			float: right;
    		}
+	}
+
+	.dialogComponent {
+	    padding: 0px;
 	}
 
 	.MaterialDialogBox.mediaDialog {
@@ -1783,7 +1791,6 @@ $shadow-card-hover: 0px 5px 5px -3px rgba(0,0,0,0.2), 0px 8px 10px 1px rgba(0,0,
     }
 
     .dialogComponent.sliderDialog {
-        padding: 0px;
         max-width: 504px;
         max-height: 450px;
 
