APPS-2064 Field -> local variable, remove unnecessary calc

--- a/web/src/main/resources/org/geogebra/web/resources/css/web-styles.less
+++ b/web/src/main/resources/org/geogebra/web/resources/css/web-styles.less
@@ -1662,7 +1662,7 @@
 	.dialogContent .sliderWidthPanel div {
 		margin-right: 10px;
 		display: inline-block;
-		width: calc(30%);
+		width: 30%;
 	}
 
 
